crystal-facet-uml (1.22.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * the xhtml export produces a table-of-contents

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 19 Apr 2020 17:30:00 +0200

crystal-facet-uml (1.21.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * containers embrace their children keeping wider gaps

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 12 Apr 2020 16:30:00 +0200

crystal-facet-uml (1.20.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * xhtml output generates a css file to allow defining own color schemes
  * xhtml output keeps linebreaks in selected (md) cases
  * bugfix: exporting docbook and xhtml via command line arguments
    works again, as in 1.16.1 (Closes: #1)
  * exported xhtml passes https://validator.w3.org/check (for quality.cfu1)
  * exported xhtml/css shows chapter numbers

 -- Andreas Warnke <cfu@andreaswarnke.de>  Mon, 23 Mar 2020 18:30:00 +0100

crystal-facet-uml (1.19.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * free text search
  * small memory leak in nav-tree-view fixed

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 14 Mar 2020 12:30:00 +0100

crystal-facet-uml (1.18.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * internal: utf8 handling is limited to 21 bits (0-0x10ffff) (2003 standard)
  * internal: all error codes are positive bitmasks now
  * text entry reworked to not loose entered text at remote-xserver usage
  * name entry is immediately possible after object creation

 -- Andreas Warnke <cfu@andreaswarnke.de>  Mon, 03 Feb 2020 21:30:00 +0100

crystal-facet-uml (1.18.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * when exporting xhtml and docbook files, windows pathnames are supported

 -- Andreas Warnke <cfu@andreaswarnke.de>  Mon, 20 Jan 2020 21:30:00 +0100

crystal-facet-uml (1.18.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * the search view allows one to search for object ids
  * bugfix: when changing type of an object, lastest changes to name